# Bash-EM

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  run-tui.sh
.opencode/: opencode.json
_examples/HTML/: ADBE_tearsheet.html  INFY_tearsheet.html  PERSISTENT_tearsheet.html
_examples/XLSX/: portfolio_HU3110_master.xlsx
_examples/website_examples/artofayan_/src/: content.config.ts
_examples/website_examples/artofayan_/src/components/: BrushCursor.astro  CategoryBar.astro  Footer.astro  GalleryGrid.astro  ImageCard.astro  Nav.astro  ThemeSwitcher.astro
_examples/website_examples/artofayan_/src/config/: theme.ts
_examples/website_examples/artofayan_/src/content/projects/: apex-legends-legacy-of-a-thief.md  banana-hut.md  barn-in-the-valley.md  city-of-pits.md  daybreak-valley.md  discovery.md  explorations-oct-20.md  food-trucks.md  frosty-glaze.md  (+46 more)
_examples/website_examples/artofayan_/src/data/: payhip-products.ts
_examples/website_examples/artofayan_/src/layouts/: BaseLayout.astro
_examples/website_examples/artofayan_/src/lib/: lightbox.ts  store-cart.ts
_examples/website_examples/artofayan_/src/pages/: 404.astro  index.astro
_examples/website_examples/artofayan_/src/scripts/: theme.ts
_examples/website_examples/artofayan_/src/styles/: global.css
_examples/website_examples/artofayan_/src/types/: colorthief.d.ts
_examples/website_examples/artofayan_/src/utils/: categories.ts
config/: default.profile.yaml
crates/adapters/: Cargo.toml
crates/adapters/src/: adapter.rs  docx.rs  lib.rs  pdf.rs  registry.rs  text.rs  walker.rs  xlsx.rs  zip_adapter.rs
crates/backup/: Cargo.toml
crates/backup/src/: lib.rs
crates/bash-em/: Cargo.toml
crates/bash-em-tui/: Cargo.toml
crates/bash-em-tui/src/: addon.rs  app.rs  event.rs  lib.rs  run.rs  theme.rs  vscroll.rs
crates/bash-em-tui/src/screens/: backups.rs  browse.rs  common.rs  mod.rs  profiles.rs  scan.rs  welcome.rs
crates/bash-em/src/: main.rs
crates/bash-em/tests/: cli.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: boilerplate.rs  health.rs  lib.rs  pipeline.rs  replacer.rs  rule.rs
crates/workflow/: Cargo.toml
crates/workflow/src/: lib.rs
docs/: NEXT-FEATURES.md  PRODUCT.md  README.md  tui-functionality-review-2.md  tui-functionality-review.md
docs/mockups/: 01-welcome-hub.html  02-scan-review.html  03-backups-profiles.html  04-fable-ui-directions.html
docs/phases/: PHASE-1.md  PHASE-2.md  PHASE-3.md
poc/: README.md  main.rs  scanner.rs
scripts/: rename-project.sh
src/: app.rs  replacer.rs  ui.rs
tests/: integration.rs
(+9 files in other folders)
