[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "bash-em-workspace"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
engine = { path = "crates/engine", features = ["serde"] }
config = { path = "crates/config" }
diff = { path = "crates/diff" }
backup = { path = "crates/backup" }
adapters = { path = "crates/adapters" }
serde_yaml = "0.9"
serde_json = "1"

[[test]]
name = "integration"
path = "tests/integration.rs"
